syntax="proto3";

package protofiles;

option go_package = "github.com/trkode/inshortsapi-grpc/proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Article{
    int64 ID=1;
	string Title=2;             
	string Subtitle=3 ;         
	string Content=4 ;          
	google.protobuf.Timestamp CreationTimestamp=5 ;
}

message CreateArticleRequest{
    string Title=1;             
	string Subtitle=2 ;         
	string Content=3 ; 
}
message GetArticleRequest{
    string id =1;
}
message ListArticlesRequest{
    string limit=1;
    string offset=2;
}
message ListArticlesResponse{
    repeated Article articleslist = 1;
}
message SearchArticleRequest{
    string q = 1;
}

message DeleteArticleRequest{
    string id = 1;
}
service Articles{
    rpc CreateArticle(CreateArticleRequest) returns (Article){}
	rpc GetArticle(GetArticleRequest) returns (Article){}
	rpc ListArticles(ListArticlesRequest) returns (ListArticlesResponse){}
	rpc SearchArticle(SearchArticleRequest) returns (ListArticlesResponse){}
    rpc DeleteArticle(DeleteArticleRequest) returns (google.protobuf.Empty){}
}

